5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4008/executions/1708_3065.log
== TEST (2019-04-29 14:14:17) 
-- CODE:
tipo de ataque = input("")
-- ERROR:
File "XXXX", line 1
    tipo de ataque = input("")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:14:22) 
-- CODE:
tipo de ataque = input()
-- ERROR:
File "XXXX", line 1
    tipo de ataque = input()
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:14:32) 
-- CODE:
tipo_de_ataque = input()
-- ERROR:
File "XXXX", line 1
    tipo de ataque = input()
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:14:37) 
-- CODE:
tipo_de_ataque = input("")
-- ERROR:
File "XXXX", line 1
    tipo de ataque = input()
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:24:52) 
-- CODE:
t = input("")
v = int(input("digite o valor: "))
n = int(input"digite o numero de turnos: ")
if(t != CAUDA) and (t !=CUSPE) and (t != PATADA) and (n < 1) and (n >4) and (v < 1) and (v > 4):
	print("Entradas invalida")
-- ERROR:
File "XXXX", line 3
    n = int(input"digite o numero de turnos: ")
                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:25:05) 
-- CODE:
t = input("")
v = int(input("digite o valor: "))
n = int(input("digite o numero de turnos: ")
if(t != CAUDA) and (t !=CUSPE) and (t != PATADA) and (n < 1) and (n >4) and (v < 1) and (v > 4):
	print("Entradas invalida")
-- ERROR:
File "XXXX", line 4
    if(t != CAUDA) and (t !=CUSPE) and (t != PATADA) and (n < 1) and (n >4) and (v < 1) and (v > 4):
                                                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:25:19) 
-- CODE:
t = input("")
v = int(input("digite o valor: "))
n = int(input("digite o numero de turnos: ")
if(t != CAUDA) and (t !=CUSPE) and (t != PATADA) and (n < 1) and (n >4) and (v < 1) and (v > 4)
	print("Entradas invalida")
-- ERROR:
File "XXXX", line 5
    print("Entradas invalida")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:25:36) 
-- CODE:
t = input("")
v = int(input("digite o valor: "))
n = int(input("digite o numero de turnos: ")
if(t != CAUDA) and (t !=CUSPE) and (t != PATADA) and (n < 1) and (n >4) and (v < 1) and (v > 4):
	print("Entradas invalida")
-- ERROR:
File "XXXX", line 4
    if(t != CAUDA) and (t !=CUSPE) and (t != PATADA) and (n < 1) and (n >4) and (v < 1) and (v > 4):
                                                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:31:44) 
-- CODE:
t = input("")
v = int(input("digite o valor: "))
n = int(input("digite o numero de turnos: ")
if(t != CAUDA) and (t !=CUSPE) and (t != PATADA) and (n < 1) and (n >4) and (v < 1) and (v > 4):
	print("Entradas invalida")
elif(t == CAUDA):
	print(n)
elif(t == CUSPE):
	print(2*n)
elif(t == PATADA):
	print(2*n - 5)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 4
    if(t != CAUDA) and (t !=CUSPE) and (t != PATADA) and (n < 1) and (n >4) and (v < 1) and (v > 4):
                                                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:32:56) 
-- CODE:
t = input("")
v = int(input("digite o valor: "))
n = int(input("digite o numero de turnos: ")
if(t != CAUDA) and (t !=CUSPE) and (t != PATADA) and (n < 1) and (n >4) and (v < 1) and (v > 4):
	print("Entradas invalida")
elif(t == CAUDA):
	print(n)
elif(t == CUSPE):
	print(2*n)
elif(t == PATADA):
	print(2*n - 5)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 4
    if(t != CAUDA) and (t !=CUSPE) and (t != PATADA) and (n < 1) and (n >4) and (v < 1) and (v > 4):
                                                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:33:11) 
-- CODE:
t = input("")
v = int(input("digite o valor: "))
n = int(input("digite o numero de turnos: ")

if(t != CAUDA) and (t !=CUSPE) and (t != PATADA) and (n < 1) and (n >4) and (v < 1) and (v > 4):
	print("Entradas invalida")
elif(t == CAUDA):
	print(n)
elif(t == CUSPE):
	print(2*n)
elif(t == PATADA):
	print(2*n - 5)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 5
    if(t != CAUDA) and (t !=CUSPE) and (t != PATADA) and (n < 1) and (n >4) and (v < 1) and (v > 4):
                                                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:33:16) 
-- CODE:
t = input("")
v = int(input("digite o valor: "))
n = int(input("digite o numero de turnos: ")

if(t != CAUDA) and (t !=CUSPE) and (t != PATADA) and (n < 1) and (n >4) and (v < 1) and (v > 4)
	print("Entradas invalida")
elif(t == CAUDA):
	print(n)
elif(t == CUSPE):
	print(2*n)
elif(t == PATADA):
	print(2*n - 5)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 6
    print("Entradas invalida")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:33:26) 
-- CODE:
t = input("")
v = int(input("digite o valor: "))
n = int(input("digite o numero de turnos: ")

if(t != CAUDA) and (t !=CUSPE) and (t != PATADA) and (n < 1) and (n >4) and (v < 1) and (v > 4)
	print("Entrada invalida")
elif(t == CAUDA):
	print(n)
elif(t == CUSPE):
	print(2*n)
elif(t == PATADA):
	print(2*n - 5)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 6
    print("Entrada invalida")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:33:37) 
-- CODE:
t = input("")
v = int(input("digite o valor: "))
n = int(input("digite o numero de turnos: ")

if(t != CAUDA) and (t !=CUSPE) and (t != PATADA) and (n < 1) and (n >4) and (v < 1) and (v > 4)
	print("Entrada invalida")
elif(t == CAUDA):
	print(n)
elif(t == CUSPE):
	print(2*n)
elif(t == PATADA):
	print(2*n - 5)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 6
    print("Entrada invalida")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:34:17) 
-- CODE:
t = input("")
v = int(input("digite o valor: "))
n = int(input("digite o numero de turnos: ")

if(t != CAUDA) and (t !=CUSPE) and (t != PATADA) and (n < 1) and (n >4) and (v < 1) and (v > 4)
	print("Entrada invalida")
elif(t == CAUDA):
	print(n)
elif(t == CUSPE):
	print(2*n)
elif(t == PATADA):
	print(2*n - 5)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 6
    print("Entrada invalida")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:35:11) 
-- CODE:
t = input("")
v = int(input("digite o valor: "))
n = int(input("digite o numero de turnos: ")

if(t!=CAUDA)and(t!=CUSPE)and(t!=PATADA)and(n < 1)and(n >4)and(v < 1)and(v > 4):
	print("Entrada invalida")
elif(t == CAUDA):
	print(n)
elif(t == CUSPE):
	print(2*n)
elif(t == PATADA):
	print(2*n - 5)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 5
    if(t!=CAUDA)and(t!=CUSPE)and(t!=PATADA)and(n < 1)and(n >4)and(v < 1)and(v > 4):
                                                                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:35:29) 
-- CODE:
t = input("")
v = int(input("digite o valor: "))
n = int(input("digite o numero de turnos: ")

if(t!=CAUDA)and(t!=CUSPE)and(t!=PATADA):
	print("Entrada invalida")
elif(t == CAUDA):
	print(n)
elif(t == CUSPE):
	print(2*n)
elif(t == PATADA):
	print(2*n - 5)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 5
    if(t!=CAUDA)and(t!=CUSPE)and(t!=PATADA):
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:37:44) 
-- CODE:
t = input("")
v = int(input("digite o valor: "))
n = int(input("digite o numero de turnos: ")

if (t != CAUDA) and (t!= CUSPE) and (t!= PATADA):
	print("Entrada invalida")
elif(t == CAUDA):
	print(n)
elif(t == CUSPE):
	print(2*n)
elif(t == PATADA):
	print(2*n - 5)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 5
    if (t != CAUDA) and (t!= CUSPE) and (t!= PATADA):
                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:40:24) 
-- CODE:
t = input("")
v = int(input("digite o valor: "))
n = int(input("digite o numero de turnos: ")

-- ERROR:
File "XXXX", line 4
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:40:28) 
-- CODE:
t = input("")
v = int(input("digite o valor: "))
n = int(input("digite o numero de turnos: ")
-- ERROR:
File "XXXX", line 4
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:40:36) 
-- CODE:
t = input("")
v = int(input("digite o valor: "))
n = int(input("digite o numero de turnos: ")
-- ERROR:
File "XXXX", line 4
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:40:41) 
-- CODE:
t = input("")

-- ERROR:
File "XXXX", line 4
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:41:14) 
-- CODE:
t = input("")
v = int(input("digite o valor sorteados: "))

-- ERROR:
File "XXXX", line 4
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:41:16) 
-- CODE:
t = input("")
v = int(input("digite o valor sorteados: "))

-- ERROR:
File "XXXX", line 4
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:41:53) 
-- CODE:
t = input("")
v = int(input("digite o valor sorteados: "))
n = int(input("numero de turnos: "))

-- ERROR:
File "XXXX", line 4
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:43:11) 
-- CODE:
t = input("")
v = int(input("digite o valor sorteados: "))
n = int(input("numero de turnos: "))
if(t!=CAUDA) and (t!=CUSPE) and (t!=PATADA):
	print("Entrada invalida")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(t!=CAUDA) and (t!=CUSPE) and (t!=PATADA):
NameError: name 'CAUDA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:43:37) 
-- CODE:
t = input("")
v = int(input("digite o valor sorteados: "))
n = int(input("numero de turnos: "))
if(t!="CAUDA") and (t!="CUSPE") and (t!="PATADA"):
	print("Entrada invalida")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(t!=CAUDA) and (t!=CUSPE) and (t!=PATADA):
NameError: name 'CAUDA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:44:40) 
-- CODE:
t = input("")
v = int(input("digite o valor sorteados: "))
n = int(input("numero de turnos: "))
if(t!="CAUDA") and (t!="CUSPE") and (t!="PATADA") and (v<1) and (v>4):
	print("Entrada invalida") 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(t!=CAUDA) and (t!=CUSPE) and (t!=PATADA):
NameError: name 'CAUDA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:45:10) 
-- CODE:
t = input("")
v = int(input("digite o valor sorteados: "))
n = int(input("numero de turnos: "))
if(t!="CAUDA") and (t!="CUSPE") and (t!="PATADA") and (v<1) and (v>4):
	print("Entrada invalida") 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(t!=CAUDA) and (t!=CUSPE) and (t!=PATADA):
NameError: name 'CAUDA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
